# reelix-ai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-hf-space.yml
.venv_worker/: pyvenv.cfg
apps/agent-service/: README.md
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: deps.py  main.py  schemas.py  supabase_client.py  test.py
apps/api/app/agent/: session_memory_service.py
apps/api/app/infrastructure/cache/: redis_infra.py  state_store.py  ticket_store.py  why_cache.py
apps/api/app/observability/: __init__.py  context.py  tracing.py
apps/api/app/rec/: ochestrator.py
apps/api/app/recomendations/: recipes.py  registry.py
apps/api/app/recommendations/: base_recipe.py  ochestrator.py  recipe_helpers.py  recipes.py  types.py
apps/api/app/repositories/: supabase_client.py  taste_profile_store.py
apps/api/app/routers/: __init__.py  profile.py  recommend.py  recommendations.py  routes_agent.py  routes_discover.py  routes_discovery.py  routes_interactions.py  routes_recommend.py  routes_recommendations.py  routes_taste_profile.py  routes_user_settings.py  routes_watchlist.py  taste_profile.py
apps/api/app/routers/discovery/: __init__.py  _helpers.py  explore.py  for_you.py  telemetry.py
apps/api/services/: recommend_service.py  taste_profile_service.py  usage_logger.py
apps/api/services/recommendations/: interactive_recs.py
apps/api/tests/: build_user_profile_unit_test.py  conftest.py  rec_pipeline_test.py  test_first_recommendation.py  test_profile.py
apps/api/tests/data/: env_test.json
apps/data-pipeline/: pyproject.toml
apps/data-pipeline/core/: bm25_utils.py  config.py  db.py  embedding_pipeline.py  judge.py  media_ids_repo.py  metrics_queries.py  rating_enrichment.py  tmdb_client.py  vectorstore_pipeline.py
apps/data-pipeline/data/bm25_files/: movie_bm25_model.joblib  movie_bm25_vocab.joblib  tv_bm25_model.joblib  tv_bm25_vocab.joblib
apps/data-pipeline/jobs/: enrich_ratings.py  eval_judge.py  eval_metrics.py  indexing.py
apps/notifier/: README.md
apps/retriever-service/: README.md
apps/scheduler-worker/: README.md  pyproject.toml
apps/web/: .eslintrc.cjs  .gitignore  index.html  netlify.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
apps/worker/: README.md  pyproject.toml
apps/worker/worker/: main.py
data-pipeline/ingestion/: README.md
data-pipeline/loaders/: README.md
data-pipeline/transforms/: README.md
docs/adr/: README.md
docs/ops/: README.md
docs/product/: README.md
embedding-pipeline/core/: __init__.py
infra/docker/: README.md
infra/gh-actions/: README.md
infra/k8s/: README.md
infra/terraform/: README.md
scripts/: README.md  check_requirements_sync.py  get_provider.py  movie_seeds_builder.py  supabase_user_data_model.sql  teaser_title_builder.py  user_profile_data_model_supabase.sql
scripts/Supabase/: agent_tables_schema.sql  (+5 more)
(+84 files in other folders)
