[project]
name = "reelix-agent-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "reelix-discovery-agent-api-client",
  "reelix-core",
  "qdrant-client",
  "supabase>=2.7.4",
  "httpx>=0.27.0",
]

[tool.uv.sources]
"reelix-discovery-agent-api-client" = { path = "../../packages/py-sdk" }
"reelix-core" = { path = "../../packages/python" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "openapi-python-client>=0.26.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
