[project]
name = "reelix-agent-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "starlette>=1.3.1",
  "uvicorn[standard]",
  "pydantic-settings",
  "reelix-core",
  "qdrant-client",
  "supabase>=2.7.4",
  "httpx>=0.27.0",
  "nltk>=3.9.3",
  "torch>=2.10.0",
  "rank_bm25",
  "sentence_transformers",
  "redis>=5.0",
  "openai",
  "pyjwt>=2.13.0",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-instrumentation-redis",
]

[tool.uv.sources]
"reelix-core" = { path = "../../packages/python", editable = true }

[dependency-groups]
dev = [
    "black>=25.1.0",

    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
