[project]
name = "reelix-agent-worker"
version = "0.1.0"
description = "Reelix Discovery Agent Worker"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "tenacity",
  "pydantic-settings",
  "schedule",
  "reelix-discovery-agent-api-client",
]

[tool.uv.sources]
"reelix-discovery-agent-api-client" = { path = "../../packages/py-sdk" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
